<resources>
    <string name="app_name">RememberMe</string>
    <string name="title_people">People</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_profile">Profile</string>

    <!-- strings for quiz things -->
    <string name="exit">Exit Quiz</string>
    <string name="submit">Submit Answer</string>
    <string name="enter_answer">your answer...</string>
    <string name="see">See Answer</string>
    <string name="next">Next Question</string>
    <string name="no_review">No Questions to Review Yet</string>
    <string name="review_mode">Review Mode</string>
    <string name="flashcard_mode">Flashcard Mode</string>
    <string name="not_enough">Not Enough Information to Make Quiz</string>
    <string name="no_face">Fill-In Quizzes for Faces Not Yet Avaliable</string>
    <string name="finish">Done</string>

    <string name="results_txt">Your Results: </string>
    <string name="wrong_ans">Your Answers</string>
    <string name="wrong">Wrong</string>
    <string name="right">Correct</string>
    <string name="done_button">Save Checked to Review</string>
    <string name="done">Remove Checked from Review</string>

    <string name="back">&lt; Back to People</string>
    <string name="quiz_me">Quiz Me</string>
    <string name="name">FIRST LAST</string>
    <string name="call">Call Name</string>
    <string name="relationship">RELATIONSHIP:</string>
    <string name="age">AGE:</string>
    <string name="birthday">BIRTHDAY:</string>
    <string name="location">LOCATION:</string>
    <string name="memories">MEMORIES</string>
    <string name="edit">EDIT</string>
    <string name="backItem">&lt; BACK TO PERSON</string>
    <string name="add_memory">+</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE CHANGES</string>
    <string name="phone">PHONE NUMBER:</string>
    <string name="remove">REMOVE</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string-array name="sort_types">
        <item>Oldest to Newest</item>
        <item>Newest to Oldest</item>
        <item>Name</item>
        <item>Relationship</item>
        <item>Location</item>
        <item>Age</item>
    </string-array>

</resources>