<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_people">

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.example.rememberme.ui.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.rememberme.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.rememberme.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>