<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFramilyProfile"
    android:background="@drawable/background">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:background="@android:color/transparent"
        android:textColor="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:background="@android:color/transparent"
        android:layout_toRightOf="@+id/back"
        android:paddingLeft="150dp"
        android:layout_alignParentRight="true"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/photo"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/save"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/_pic"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/photo"
        android:hint="@string/name"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="20dp"
        android:id="@+id/table"
        android:stretchColumns="*"
        android:gravity="center"
        android:padding="10dip">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/relationship_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relationship"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp" />

            <TextView

                android:id="@+id/relationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="insert here"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_gravity="right"/>

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp" />

            <TextView

                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="insert here"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_gravity="right"/>

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp" />

            <TextView

                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="insert here"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_gravity="right"/>

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp" />

            <TextView

                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="insert here"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_gravity="right"/>

        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/memories"
        android:text="@string/memories"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingLeft="5dp"
        android:layout_below="@id/table"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_memory"
        android:text="@string/add_memory"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/table"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:paddingTop="18dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:textStyle="bold"/>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:columnWidth="100dp"
        android:numColumns="3"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="0dp"
        android:layout_below="@id/memories"
        />




</RelativeLayout>