<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:gravity="center"
        android:background="@color/custom_blue"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/results_txt"
        android:textSize="30sp"
        android:textColor = "#000000"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor = "#000000"
        android:textSize = "30sp"
        android:text = "100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor = "#000000"
        android:textSize = "30sp"
        android:text = "%"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:background="@color/custom_blue"
        >
        <TextView
            android:id="@+id/numCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor = "#000000"
            android:textSize = "25sp"
            android:text = "__"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor = "#000000"
            android:textSize = "25sp"
            android:text = "@string/right"/>

        <TextView
            android:id="@+id/numWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor = "#000000"
            android:textSize = "25sp"
            android:text = "__"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor = "#000000"
            android:textSize = "25sp"
            android:text = "@string/wrong"/>

    </LinearLayout>

    <TextView
        android:id="@+id/wrongList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor = "#000000"
        android:textSize = "25sp"
        android:text = "@string/wrong_ans"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d3d3d3"/>


    <ListView android:id="@+id/wrongAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>