<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/quiz_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <!--progress bar -->

        <TextView
            android:id = "@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="20dp"
            android:background="@drawable/card"
            android:textSize="40dp"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            >

        </TextView>

        <!--progress bar <FrameLayout
             android:id="@+id/question_sec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
             <include layout="@layout/flashcard" />
         </FrameLayout>
            -->

         <EditText
             android:id="@+id/fillin_ans"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:hint="@string/enter_answer"
             android:maxLines="7"
             android:textSize="16sp"
             android:layout_margin="20dp"
             >
         </EditText>

         <Button
             android:id="@+id/submit_ans"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit"
             android:layout_margin="20dp"
             android:background="@drawable/button"
             android:textColor="@color/white"
             />


     </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        />

 </FrameLayout>